// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Title Debe de Mostrar el componente con el titulo Personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Example Title
</span>
`;

exports[`Product Title Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Producto 1
  </span>
</div>
`;
